9 June 2011: Wouter
	- fix bug that relptrs have to be inited with rel_ptr_init() when
	  created and zeroed with rptr_zero before deletion.
	- tag 4.0.0-imp4 created
	- trunk is 4.0.0-imp5 under development.

8 June 2011: Wouter
	- nsd reads the zonelist file on start.
	- updated acx_nlnetlabs.m4 to version 11.
	- configure checks size of off_t and increase region-allocator
	  alignment to 8 if it is 64bit and alignment at 4.
	- fixed bug where not all references were removed before mmap was
	  synced to another process.

7 June 2011: Wouter
	- code to add and remove zonelist entries, and unit test.

6 June 2011: Wouter
	- fix unit tests for mmap with TODO and removal of -f in nsd-patch.
	- zone expiry is communicated via the mmap, and not via the pipes,
	  simplifying the code significantly as well as making a large number
	  of zones more feasible.

1 June 2011: Wouter
	- mmap used for parent-xfrd communication of tasks and task results.
	  SIGHUP is sent to xfrd so it can become a task in the normal
	  workflow. This can process about 4500 zones per second (this was
	  with lots of debug prints per zone, in debug compile). The mmaps
	  are file-backed with /tmp/ files.  They are removed on a clean exit.
	- nsd.db and tmp mmaps are created with mode 0600 for safety.
	- updated flag removed, nsd-patch always in -f force mode (-f removed)
	  and writes all zones always. Its role is taken over by task results.

30 May 2011: Wouter
	- Fix Makefile for U in environment, since wrong U is more common than
	  deansification necessity.

27 May 2011: Wouter
	- xfrd is forked before the database is read in, thus it does not
	  consume the memory of the database.  It can be reforked on a crash,
	  which is like the current case.  Difffile is cleaned by main process
	  and the soa serials are all sent via pipe instead of via forkmem.

24 May 2011: Wouter
	- implemented patterns in the nsd.conf file.
	  they can be instantiated with include-pattern: x.