@@ -1,3 +1,6 @@
+14 June 2011: Wouter
+	- Fix to have no authority NS set processing for CNAMEs.
+
 9 June 2011: Wouter
 	- fix bug that relptrs have to be inited with rel_ptr_init() when
 	  created and zeroed with rptr_zero before deletion.
